// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (0) 1`] = `[]`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (1) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(average)",
      "end": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "average",
    },
  ],
  [
    "exit",
    {
      "command": "Command(average)",
      "end": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "average",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "0",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "0",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 12,
        "offset": 11,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "1",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 12,
        "offset": 11,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "1",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 13,
        "offset": 12,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "2",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 13,
        "offset": 12,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "2",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (2) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(bun)",
      "end": {
        "line": 1,
        "column": 4,
        "offset": 3,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "bun",
    },
  ],
  [
    "exit",
    {
      "command": "Command(bun)",
      "end": {
        "line": 1,
        "column": 4,
        "offset": 3,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "bun",
    },
  ],
  [
    "enter",
    {
      "command": "Command(run)",
      "end": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "run",
    },
  ],
  [
    "exit",
    {
      "command": "Command(run)",
      "end": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "run",
    },
  ],
  [
    "enter",
    {
      "command": "Command(bun)",
      "end": {
        "line": 1,
        "column": 16,
        "offset": 15,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "global": true,
      "long": true,
      "option": "Option(--watch)",
      "start": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--watch",
    },
  ],
  [
    "exit",
    {
      "command": "Command(bun)",
      "end": {
        "line": 1,
        "column": 16,
        "offset": 15,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "global": true,
      "long": true,
      "option": "Option(--watch)",
      "start": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--watch",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 31,
        "offset": 30,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "./src/main.mts",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 31,
        "offset": 30,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "./src/main.mts",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (3) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(bun)",
      "end": {
        "line": 1,
        "column": 4,
        "offset": 3,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "bun",
    },
  ],
  [
    "exit",
    {
      "command": "Command(bun)",
      "end": {
        "line": 1,
        "column": 4,
        "offset": 3,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "bun",
    },
  ],
  [
    "enter",
    {
      "command": "Command(run)",
      "end": {
        "line": 1,
        "column": 24,
        "offset": 23,
        "_index": 2,
        "_bufferIndex": 19,
      },
      "long": true,
      "option": "Option(--tsconfig-override <>)",
      "start": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--tsconfig-override",
    },
  ],
  [
    "exit",
    {
      "command": "Command(run)",
      "end": {
        "line": 1,
        "column": 24,
        "offset": 23,
        "_index": 2,
        "_bufferIndex": 19,
      },
      "long": true,
      "option": "Option(--tsconfig-override <>)",
      "start": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--tsconfig-override",
    },
  ],
  [
    "enter",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 43,
        "offset": 42,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 25,
        "offset": 24,
        "_index": 2,
        "_bufferIndex": 20,
      },
      "type": "operand",
      "value": "tsconfig.prod.json",
    },
  ],
  [
    "exit",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 43,
        "offset": 42,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 25,
        "offset": 24,
        "_index": 2,
        "_bufferIndex": 20,
      },
      "type": "operand",
      "value": "tsconfig.prod.json",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 56,
        "offset": 55,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 44,
        "offset": 43,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "src/main.mts",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 56,
        "offset": 55,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 44,
        "offset": 43,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "src/main.mts",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (4) 1`] = `
[
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "./scratch.mts",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "./scratch.mts",
    },
  ],
  [
    "enter",
    {
      "command": "Command(bun)",
      "end": {
        "line": 1,
        "column": 27,
        "offset": 26,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "long": true,
      "option": "Option(--conditions <...>)",
      "start": {
        "line": 1,
        "column": 15,
        "offset": 14,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--conditions",
    },
  ],
  [
    "exit",
    {
      "command": "Command(bun)",
      "end": {
        "line": 1,
        "column": 27,
        "offset": 26,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "long": true,
      "option": "Option(--conditions <...>)",
      "start": {
        "line": 1,
        "column": 15,
        "offset": 14,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--conditions",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 39,
        "offset": 38,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 28,
        "offset": 27,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": [
        "development",
        "kronk",
      ],
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 39,
        "offset": 38,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 28,
        "offset": 27,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": [
        "development",
        "kronk",
      ],
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (5) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 0,
        "_bufferIndex": 2,
      },
      "option": "Option(-M | --max <n>)",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-M",
    },
  ],
  [
    "exit",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 0,
        "_bufferIndex": 2,
      },
      "option": "Option(-M | --max <n>)",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-M",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "end": {
        "line": 1,
        "column": 4,
        "offset": 3,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 0,
        "_bufferIndex": 2,
      },
      "type": "operand",
      "value": "3",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "end": {
        "line": 1,
        "column": 4,
        "offset": 3,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 0,
        "_bufferIndex": 2,
      },
      "type": "operand",
      "value": "3",
    },
  ],
  [
    "enter",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "option": "Option(-m | --min <n>)",
      "short": true,
      "start": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-m",
    },
  ],
  [
    "exit",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "option": "Option(-m | --min <n>)",
      "short": true,
      "start": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-m",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "end": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "type": "operand",
      "value": "-1",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "end": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "type": "operand",
      "value": "-1",
    },
  ],
  [
    "enter",
    {
      "end": {
        "line": 1,
        "column": 12,
        "offset": 11,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "delimiter",
    },
  ],
  [
    "exit",
    {
      "end": {
        "line": 1,
        "column": 12,
        "offset": 11,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "delimiter",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 16,
        "offset": 15,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 13,
        "offset": 12,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "-13",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 16,
        "offset": 15,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 13,
        "offset": 12,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "-13",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (6) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 0,
        "_bufferIndex": 2,
      },
      "option": "Option(-M | --max <n>)",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-M",
    },
  ],
  [
    "exit",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 0,
        "_bufferIndex": 2,
      },
      "option": "Option(-M | --max <n>)",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-M",
    },
  ],
  [
    "enter",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 6,
        "offset": 5,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 4,
        "offset": 3,
        "_index": 0,
        "_bufferIndex": 3,
      },
      "type": "operand",
      "value": "26",
    },
  ],
  [
    "exit",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 6,
        "offset": 5,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 4,
        "offset": 3,
        "_index": 0,
        "_bufferIndex": 3,
      },
      "type": "operand",
      "value": "26",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "9",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "9",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (7) 1`] = `
[
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 2,
        "offset": 1,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "1",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 2,
        "offset": 1,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "1",
    },
  ],
  [
    "enter",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "long": true,
      "option": "Option(-M | --max <n>)",
      "start": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--max",
    },
  ],
  [
    "exit",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "long": true,
      "option": "Option(-M | --max <n>)",
      "start": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--max",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "26",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "26",
    },
  ],
  [
    "enter",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 6,
        "_bufferIndex": 5,
      },
      "long": true,
      "option": "Option(-m | --min <n>)",
      "start": {
        "line": 1,
        "column": 12,
        "offset": 11,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--min",
    },
  ],
  [
    "exit",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 6,
        "_bufferIndex": 5,
      },
      "long": true,
      "option": "Option(-m | --min <n>)",
      "start": {
        "line": 1,
        "column": 12,
        "offset": 11,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--min",
    },
  ],
  [
    "enter",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 20,
        "offset": 19,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 18,
        "offset": 17,
        "_index": 6,
        "_bufferIndex": 6,
      },
      "type": "operand",
      "value": "13",
    },
  ],
  [
    "exit",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 20,
        "offset": 19,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 18,
        "offset": 17,
        "_index": 6,
        "_bufferIndex": 6,
      },
      "type": "operand",
      "value": "13",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (8) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 6,
        "offset": 5,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "clamp",
    },
  ],
  [
    "exit",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 6,
        "offset": 5,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "clamp",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "3",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "3",
    },
  ],
  [
    "enter",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "long": true,
      "option": "Option(-M | --max <n>)",
      "start": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--max",
    },
  ],
  [
    "exit",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "long": true,
      "option": "Option(-M | --max <n>)",
      "start": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--max",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 15,
        "offset": 14,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "13",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 15,
        "offset": 14,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "13",
    },
  ],
  [
    "enter",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 23,
        "offset": 22,
        "_index": 8,
        "_bufferIndex": 5,
      },
      "long": true,
      "option": "Option(-m | --min <n>)",
      "start": {
        "line": 1,
        "column": 18,
        "offset": 17,
        "_index": 8,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--min",
    },
  ],
  [
    "exit",
    {
      "command": "Command(clamp)",
      "end": {
        "line": 1,
        "column": 23,
        "offset": 22,
        "_index": 8,
        "_bufferIndex": 5,
      },
      "long": true,
      "option": "Option(-m | --min <n>)",
      "start": {
        "line": 1,
        "column": 18,
        "offset": 17,
        "_index": 8,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--min",
    },
  ],
  [
    "enter",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 24,
        "offset": 23,
        "_index": 9,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 24,
        "offset": 23,
        "_index": 8,
        "_bufferIndex": 6,
      },
      "type": "operand",
      "value": "",
    },
  ],
  [
    "exit",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 24,
        "offset": 23,
        "_index": 9,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 24,
        "offset": 23,
        "_index": 8,
        "_bufferIndex": 6,
      },
      "type": "operand",
      "value": "",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (9) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "long": true,
      "option": "Option(-v | --version)",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--version",
    },
  ],
  [
    "exit",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "long": true,
      "option": "Option(-v | --version)",
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--version",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (10) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 4,
        "offset": 3,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "option": "Option(-j | --json)",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-j",
    },
  ],
  [
    "exit",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 4,
        "offset": 3,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "option": "Option(-j | --json)",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-j",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 4,
        "offset": 3,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "option": "Option(-u | --unstable [choice])",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-u",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 4,
        "offset": 3,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "option": "Option(-u | --unstable [choice])",
      "short": true,
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-u",
    },
  ],
  [
    "enter",
    {
      "command": "Command(bump)",
      "end": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "bump",
    },
  ],
  [
    "exit",
    {
      "command": "Command(bump)",
      "end": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "bump",
    },
  ],
  [
    "enter",
    {
      "command": "Command(bump)",
      "end": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 4,
        "_bufferIndex": 7,
      },
      "long": true,
      "option": "Option(--preid <id>)",
      "start": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--preid",
    },
  ],
  [
    "exit",
    {
      "command": "Command(bump)",
      "end": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 4,
        "_bufferIndex": 7,
      },
      "long": true,
      "option": "Option(--preid <id>)",
      "start": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--preid",
    },
  ],
  [
    "enter",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 23,
        "offset": 22,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 18,
        "offset": 17,
        "_index": 4,
        "_bufferIndex": 8,
      },
      "type": "operand",
      "value": "alpha",
    },
  ],
  [
    "exit",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 23,
        "offset": 22,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 18,
        "offset": 17,
        "_index": 4,
        "_bufferIndex": 8,
      },
      "type": "operand",
      "value": "alpha",
    },
  ],
  [
    "enter",
    {
      "command": "Command(recommend)",
      "end": {
        "line": 1,
        "column": 33,
        "offset": 32,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 24,
        "offset": 23,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "recommend",
    },
  ],
  [
    "exit",
    {
      "command": "Command(recommend)",
      "end": {
        "line": 1,
        "column": 33,
        "offset": 32,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 24,
        "offset": 23,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "recommend",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (11) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(changelog)",
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "ch",
    },
  ],
  [
    "exit",
    {
      "command": "Command(changelog)",
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "ch",
    },
  ],
  [
    "enter",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 2,
        "_bufferIndex": 3,
      },
      "global": true,
      "option": "Option(-w | --write)",
      "short": true,
      "start": {
        "line": 1,
        "column": 4,
        "offset": 3,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-w",
    },
  ],
  [
    "exit",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 2,
        "_bufferIndex": 3,
      },
      "global": true,
      "option": "Option(-w | --write)",
      "short": true,
      "start": {
        "line": 1,
        "column": 4,
        "offset": 3,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-w",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "command": "Command(changelog)",
      "end": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 2,
        "_bufferIndex": 3,
      },
      "global": true,
      "option": "Option(-r | --releases <count>)",
      "short": true,
      "start": {
        "line": 1,
        "column": 4,
        "offset": 3,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-r",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "command": "Command(changelog)",
      "end": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 2,
        "_bufferIndex": 3,
      },
      "global": true,
      "option": "Option(-r | --releases <count>)",
      "short": true,
      "start": {
        "line": 1,
        "column": 4,
        "offset": 3,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-r",
    },
  ],
  [
    "enter",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 2,
        "_bufferIndex": 4,
      },
      "type": "operand",
      "value": "0",
    },
  ],
  [
    "exit",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 2,
        "_bufferIndex": 4,
      },
      "type": "operand",
      "value": "0",
    },
  ],
  [
    "enter",
    {
      "command": "Command(changelog)",
      "end": {
        "line": 1,
        "column": 12,
        "offset": 11,
        "_index": 4,
        "_bufferIndex": 2,
      },
      "option": "Option(-t | --to <commitish>)",
      "short": true,
      "start": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-t",
    },
  ],
  [
    "exit",
    {
      "command": "Command(changelog)",
      "end": {
        "line": 1,
        "column": 12,
        "offset": 11,
        "_index": 4,
        "_bufferIndex": 2,
      },
      "option": "Option(-t | --to <commitish>)",
      "short": true,
      "start": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-t",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "end": {
        "line": 1,
        "column": 42,
        "offset": 41,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 12,
        "offset": 11,
        "_index": 4,
        "_bufferIndex": 2,
      },
      "type": "operand",
      "value": "$(jq .version package.json -r)",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "end": {
        "line": 1,
        "column": 42,
        "offset": 41,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 12,
        "offset": 11,
        "_index": 4,
        "_bufferIndex": 2,
      },
      "type": "operand",
      "value": "$(jq .version package.json -r)",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (12) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(changelog)",
      "end": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "changelog",
    },
  ],
  [
    "exit",
    {
      "command": "Command(changelog)",
      "end": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "changelog",
    },
  ],
  [
    "enter",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 25,
        "offset": 24,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "global": true,
      "option": "Option(-w | --write)",
      "short": true,
      "start": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-w",
    },
  ],
  [
    "exit",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 25,
        "offset": 24,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "global": true,
      "option": "Option(-w | --write)",
      "short": true,
      "start": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-w",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "command": "Command(changelog)",
      "end": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 2,
        "_bufferIndex": 3,
      },
      "global": true,
      "option": "Option(-o | --outfile <path>)",
      "short": true,
      "start": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-o",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "command": "Command(changelog)",
      "end": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 2,
        "_bufferIndex": 3,
      },
      "global": true,
      "option": "Option(-o | --outfile <path>)",
      "short": true,
      "start": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-o",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "end": {
        "line": 1,
        "column": 25,
        "offset": 24,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 2,
        "_bufferIndex": 3,
      },
      "type": "operand",
      "value": "$NOTES_FILE",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "end": {
        "line": 1,
        "column": 25,
        "offset": 24,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 14,
        "offset": 13,
        "_index": 2,
        "_bufferIndex": 3,
      },
      "type": "operand",
      "value": "$NOTES_FILE",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (13) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "grease",
    },
  ],
  [
    "exit",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "grease",
    },
  ],
  [
    "enter",
    {
      "command": "Command(pack)",
      "end": {
        "line": 1,
        "column": 12,
        "offset": 11,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "pack",
    },
  ],
  [
    "exit",
    {
      "command": "Command(pack)",
      "end": {
        "line": 1,
        "column": 12,
        "offset": 11,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "pack",
    },
  ],
  [
    "enter",
    {
      "command": "Command(pack)",
      "end": {
        "line": 1,
        "column": 15,
        "offset": 14,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "option": "Option(-o | --out <outfile>)",
      "short": true,
      "start": {
        "line": 1,
        "column": 13,
        "offset": 12,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-o",
    },
  ],
  [
    "exit",
    {
      "command": "Command(pack)",
      "end": {
        "line": 1,
        "column": 15,
        "offset": 14,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "option": "Option(-o | --out <outfile>)",
      "short": true,
      "start": {
        "line": 1,
        "column": 13,
        "offset": 12,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-o",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 25,
        "offset": 24,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 16,
        "offset": 15,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "%s-%v.tgz",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 25,
        "offset": 24,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 16,
        "offset": 15,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "%s-%v.tgz",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (14) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "grease",
    },
  ],
  [
    "exit",
    {
      "command": "Command(grease)",
      "end": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "grease",
    },
  ],
  [
    "enter",
    {
      "command": "Command(tag)",
      "end": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "tag",
    },
  ],
  [
    "exit",
    {
      "command": "Command(tag)",
      "end": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "tag",
    },
  ],
  [
    "enter",
    {
      "command": "Command(create)",
      "end": {
        "line": 1,
        "column": 18,
        "offset": 17,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 12,
        "offset": 11,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "create",
    },
  ],
  [
    "exit",
    {
      "command": "Command(create)",
      "end": {
        "line": 1,
        "column": 18,
        "offset": 17,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 12,
        "offset": 11,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "create",
    },
  ],
  [
    "enter",
    {
      "command": "Command(create)",
      "end": {
        "line": 1,
        "column": 21,
        "offset": 20,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "option": "Option(-p | --push [choice])",
      "short": true,
      "start": {
        "line": 1,
        "column": 19,
        "offset": 18,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-p",
    },
  ],
  [
    "exit",
    {
      "command": "Command(create)",
      "end": {
        "line": 1,
        "column": 21,
        "offset": 20,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "option": "Option(-p | --push [choice])",
      "short": true,
      "start": {
        "line": 1,
        "column": 19,
        "offset": 18,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-p",
    },
  ],
  [
    "enter",
    {
      "command": "Command(create)",
      "end": {
        "line": 1,
        "column": 24,
        "offset": 23,
        "_index": 9,
        "_bufferIndex": -1,
      },
      "option": "Option(-s | --sign [opt])",
      "short": true,
      "start": {
        "line": 1,
        "column": 22,
        "offset": 21,
        "_index": 8,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-s",
    },
  ],
  [
    "exit",
    {
      "command": "Command(create)",
      "end": {
        "line": 1,
        "column": 24,
        "offset": 23,
        "_index": 9,
        "_bufferIndex": -1,
      },
      "option": "Option(-s | --sign [opt])",
      "short": true,
      "start": {
        "line": 1,
        "column": 22,
        "offset": 21,
        "_index": 8,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-s",
    },
  ],
  [
    "enter",
    {
      "command": "Command(create)",
      "end": {
        "line": 1,
        "column": 27,
        "offset": 26,
        "_index": 10,
        "_bufferIndex": 2,
      },
      "option": "Option(-m | --message <msg>)",
      "short": true,
      "start": {
        "line": 1,
        "column": 25,
        "offset": 24,
        "_index": 10,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-m",
    },
  ],
  [
    "exit",
    {
      "command": "Command(create)",
      "end": {
        "line": 1,
        "column": 27,
        "offset": 26,
        "_index": 10,
        "_bufferIndex": 2,
      },
      "option": "Option(-m | --message <msg>)",
      "short": true,
      "start": {
        "line": 1,
        "column": 25,
        "offset": 24,
        "_index": 10,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-m",
    },
  ],
  [
    "enter",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 42,
        "offset": 41,
        "_index": 11,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 28,
        "offset": 27,
        "_index": 10,
        "_bufferIndex": 3,
      },
      "type": "operand",
      "value": "release: {tag}",
    },
  ],
  [
    "exit",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 42,
        "offset": 41,
        "_index": 11,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 28,
        "offset": 27,
        "_index": 10,
        "_bufferIndex": 3,
      },
      "type": "operand",
      "value": "release: {tag}",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 57,
        "offset": 56,
        "_index": 13,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 43,
        "offset": 42,
        "_index": 12,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "3.0.0-alpha.10",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 57,
        "offset": 56,
        "_index": 13,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 43,
        "offset": 42,
        "_index": 12,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "3.0.0-alpha.10",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (15) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(resolve)",
      "end": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "resolve",
    },
  ],
  [
    "exit",
    {
      "command": "Command(resolve)",
      "end": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "resolve",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 27,
        "offset": 26,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "#internal/tokenize",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 27,
        "offset": 26,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "#internal/tokenize",
    },
  ],
  [
    "enter",
    {
      "command": "Command(mlly)",
      "end": {
        "line": 1,
        "column": 36,
        "offset": 35,
        "_index": 4,
        "_bufferIndex": 8,
      },
      "global": true,
      "long": true,
      "option": "Option(-p | --parent <!>)",
      "start": {
        "line": 1,
        "column": 28,
        "offset": 27,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--parent",
    },
  ],
  [
    "exit",
    {
      "command": "Command(mlly)",
      "end": {
        "line": 1,
        "column": 36,
        "offset": 35,
        "_index": 4,
        "_bufferIndex": 8,
      },
      "global": true,
      "long": true,
      "option": "Option(-p | --parent <!>)",
      "start": {
        "line": 1,
        "column": 28,
        "offset": 27,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--parent",
    },
  ],
  [
    "enter",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 38,
        "offset": 37,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 37,
        "offset": 36,
        "_index": 4,
        "_bufferIndex": 9,
      },
      "type": "operand",
      "value": ".",
    },
  ],
  [
    "exit",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 38,
        "offset": 37,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 37,
        "offset": 36,
        "_index": 4,
        "_bufferIndex": 9,
      },
      "type": "operand",
      "value": ".",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (16) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(mlly)",
      "end": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "mlly",
    },
  ],
  [
    "exit",
    {
      "command": "Command(mlly)",
      "end": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "mlly",
    },
  ],
  [
    "enter",
    {
      "command": "Command(mlly)",
      "end": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "option": "Option(-p | --parent <!>)",
      "short": true,
      "start": {
        "line": 1,
        "column": 6,
        "offset": 5,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-p",
    },
  ],
  [
    "exit",
    {
      "command": "Command(mlly)",
      "end": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "option": "Option(-p | --parent <!>)",
      "short": true,
      "start": {
        "line": 1,
        "column": 6,
        "offset": 5,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-p",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "end": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "type": "operand",
      "value": ".",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "end": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "type": "operand",
      "value": ".",
    },
  ],
  [
    "enter",
    {
      "command": "Command(resolve)",
      "end": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "resolve",
    },
  ],
  [
    "exit",
    {
      "command": "Command(resolve)",
      "end": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "resolve",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 30,
        "offset": 29,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 18,
        "offset": 17,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "#lib/command",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 30,
        "offset": 29,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 18,
        "offset": 17,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "#lib/command",
    },
  ],
  [
    "enter",
    {
      "command": "Command(resolve)",
      "end": {
        "line": 1,
        "column": 43,
        "offset": 42,
        "_index": 8,
        "_bufferIndex": 12,
      },
      "long": true,
      "option": "Option(-c | --conditions <...>)",
      "start": {
        "line": 1,
        "column": 31,
        "offset": 30,
        "_index": 8,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--conditions",
    },
  ],
  [
    "exit",
    {
      "command": "Command(resolve)",
      "end": {
        "line": 1,
        "column": 43,
        "offset": 42,
        "_index": 8,
        "_bufferIndex": 12,
      },
      "long": true,
      "option": "Option(-c | --conditions <...>)",
      "start": {
        "line": 1,
        "column": 31,
        "offset": 30,
        "_index": 8,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--conditions",
    },
  ],
  [
    "enter",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 49,
        "offset": 48,
        "_index": 9,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 44,
        "offset": 43,
        "_index": 8,
        "_bufferIndex": 13,
      },
      "type": "operand",
      "value": [
        "kronk",
        "development",
        "node",
      ],
    },
  ],
  [
    "exit",
    {
      "attached": true,
      "end": {
        "line": 1,
        "column": 49,
        "offset": 48,
        "_index": 9,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 44,
        "offset": 43,
        "_index": 8,
        "_bufferIndex": 13,
      },
      "type": "operand",
      "value": [
        "kronk",
        "development",
        "node",
      ],
    },
  ],
  [
    "enter",
    {
      "command": "Command(resolve)",
      "end": {
        "line": 1,
        "column": 69,
        "offset": 68,
        "_index": 15,
        "_bufferIndex": -1,
      },
      "long": true,
      "option": "Option(--ps | --preserve-symlinks)",
      "start": {
        "line": 1,
        "column": 65,
        "offset": 64,
        "_index": 14,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--ps",
    },
  ],
  [
    "exit",
    {
      "command": "Command(resolve)",
      "end": {
        "line": 1,
        "column": 69,
        "offset": 68,
        "_index": 15,
        "_bufferIndex": -1,
      },
      "long": true,
      "option": "Option(--ps | --preserve-symlinks)",
      "start": {
        "line": 1,
        "column": 65,
        "offset": 64,
        "_index": 14,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "--ps",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (17) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(smallest-num)",
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "sn",
    },
  ],
  [
    "exit",
    {
      "command": "Command(smallest-num)",
      "end": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "sn",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 4,
        "offset": 3,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "1",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 4,
        "offset": 3,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "1",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 6,
        "offset": 5,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "2",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 6,
        "offset": 5,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "2",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "3",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "3",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (18) 1`] = `
[
  [
    "enter",
    {
      "command": "Command(join)",
      "end": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "join",
    },
  ],
  [
    "exit",
    {
      "command": "Command(join)",
      "end": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "join",
    },
  ],
  [
    "enter",
    {
      "command": "Command(string-util)",
      "end": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "global": true,
      "option": "Option(-s, --separator <char>)",
      "short": true,
      "start": {
        "line": 1,
        "column": 6,
        "offset": 5,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-s",
    },
  ],
  [
    "exit",
    {
      "command": "Command(string-util)",
      "end": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "global": true,
      "option": "Option(-s, --separator <char>)",
      "short": true,
      "start": {
        "line": 1,
        "column": 6,
        "offset": 5,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-s",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "end": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "type": "operand",
      "value": "...",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "end": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 8,
        "offset": 7,
        "_index": 2,
        "_bufferIndex": 2,
      },
      "type": "operand",
      "value": "...",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 12,
        "offset": 11,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "a...z",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 17,
        "offset": 16,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 12,
        "offset": 11,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "a...z",
    },
  ],
]
`;

exports[`integration:constructs/initialCommand > should tokenize command-line arguments (19) 1`] = `
[
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 2,
        "offset": 1,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "2",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 2,
        "offset": 1,
        "_index": 1,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 1,
        "offset": 0,
        "_index": 0,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "2",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 4,
        "offset": 3,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "2",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 4,
        "offset": 3,
        "_index": 3,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 3,
        "offset": 2,
        "_index": 2,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "2",
    },
  ],
  [
    "enter",
    {
      "command": "Command(tribonacci)",
      "end": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 4,
        "_bufferIndex": 2,
      },
      "option": "Option(-n\\t<!>)",
      "short": true,
      "start": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-n",
    },
  ],
  [
    "exit",
    {
      "command": "Command(tribonacci)",
      "end": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 4,
        "_bufferIndex": 2,
      },
      "option": "Option(-n\\t<!>)",
      "short": true,
      "start": {
        "line": 1,
        "column": 5,
        "offset": 4,
        "_index": 4,
        "_bufferIndex": 0,
      },
      "type": "flag",
      "value": "-n",
    },
  ],
  [
    "enter",
    {
      "combined": true,
      "end": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 4,
        "_bufferIndex": 2,
      },
      "type": "operand",
      "value": "13",
    },
  ],
  [
    "exit",
    {
      "combined": true,
      "end": {
        "line": 1,
        "column": 9,
        "offset": 8,
        "_index": 5,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 7,
        "offset": 6,
        "_index": 4,
        "_bufferIndex": 2,
      },
      "type": "operand",
      "value": "13",
    },
  ],
  [
    "enter",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "3",
    },
  ],
  [
    "exit",
    {
      "attached": false,
      "end": {
        "line": 1,
        "column": 11,
        "offset": 10,
        "_index": 7,
        "_bufferIndex": -1,
      },
      "start": {
        "line": 1,
        "column": 10,
        "offset": 9,
        "_index": 6,
        "_bufferIndex": 0,
      },
      "type": "operand",
      "value": "3",
    },
  ],
]
`;
